--- a/.github/workflows/docs_workflow.yml
+++ b/.github/workflows/docs_workflow.yml
@@ -3,28 +3,26 @@ name: Documentation Workflow
 on:
   push:
     branches:
-      - attackspeed
+      - documentation
       - gh-pages
 
 jobs:
-
   deploy:
     name: Deploy to github pages
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    
-    - run: sudo apt-get install doxygen
-    - run: sudo apt-get install graphviz
-    - run: doxygen doxconf
+      - uses: actions/checkout@master
 
-    - name: Push git subdirectory as branch
-      uses: s0/git-publish-subdir-action@v2.4.0
+      - run: sudo apt-get install doxygen
+      - run: sudo apt-get install graphviz
+      - run: doxygen doxconf
 
-      env:
-        REPO: self
-        BRANCH: gh-pages
-        FOLDER: DOCS/html
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        CLEAN: true
+      - name: Push git subdirectory as branch
+        uses: s0/git-publish-subdir-action@v2.4.0
 
+        env:
+          REPO: self
+          BRANCH: gh-pages
+          FOLDER: DOCS/html
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CLEAN: true
