Unify unit tests

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,6 +4,7 @@ find_package(GTest REQUIRED)
 include_directories(${GTEST_INCLUDE_DIRS})
 
 add_library(parserSourceCode ../jsonparser.cpp)
-add_executable(parserTest parser_test.cpp)
+add_library(unitSourceCode ../unit.cpp)
+add_executable(unitTests unit_tests.cpp)
 
-target_link_libraries(parserTest ${GTEST_LIBRARIES} pthread parserSourceCode)
+target_link_libraries(unitTests ${GTEST_LIBRARIES} pthread parserSourceCode unitSourceCode)
