--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -10,27 +10,21 @@ jobs:
       - name: Install valgrind and cppcheck
         run: sudo apt install cppcheck valgrind
       - name: Compile code with g++
-        run: g++ -std=c++17 *.cpp -Wall -Wextra
-      - name: Make test scripts executable
-        run: chmod +x ./cppcheck_test.sh ./memory_test.sh
+        run: make build
       - name: Run cppcheck code analysis
-        run: ./cppcheck_test.sh
+        run: make static-code-analysis
       - name: Artifact logs
         uses: actions/upload-artifact@v2
         with:
           path: ./performance_log.txt
-      - name: Memory test
-        run: ./memory_test.sh
+      - name: Run memory test
+        run: make memory-leak-check
 
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: Compile code with g++
-        run: g++ -std=c++17 *.cpp
-      - name: Make test script executable
-        run: chmod +x run_test.sh
-      - name: Execute test script
-        run: ./run_test.sh
-      - name: Evaluate test results
-        run: diff test/results.txt test/expected_results.txt
+        run: make build
+      - name: Execute test and evaluate results
+        run: make io-diff-tests
