--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -9,5 +9,5 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install depedencies
         run: sudo apt install libgtest-dev && sudo apt install cmake
-      - name: Run tests through Makefile
+      - name: Run unit tests
         run: make run_unit_tests
