--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,10 +1,9 @@
 cmake_minimum_required(VERSION 2.6)
+project(UnitTests)
 
 find_package(GTest REQUIRED)
 include_directories(${GTEST_INCLUDE_DIRS})
 
-add_library(parserSourceCode ../jsonparser.cpp)
-add_library(unitSourceCode ../unit.cpp)
-add_executable(unitTests unit_tests.cpp)
+add_executable(unitTests unit_tests.cpp ../jsonparser.cpp ../unit.cpp)
 
-target_link_libraries(unitTests ${GTEST_LIBRARIES} pthread parserSourceCode unitSourceCode)
+target_link_libraries(unitTests ${GTEST_LIBRARIES} pthread)
